[package]
name = "qldbx"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "qldbx"

[dependencies]
amazon-qldb-driver-core = { version = "*", git = "https://github.com/awslabs/amazon-qldb-driver-rust.git", package = "amazon-qldb-driver-core" }
async-trait = "0.1.64"
aws-config = { version = "0.52.0", features = [] }
aws-sdk-qldb = "0.22.0"
hex = "0.4.3"
ion-c-sys = "0.4.15"
sha2 = "0.10.6"
thiserror = "1.0.38"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive", "env"] }
dotenvy = "0.15.6"
tokio = { version = "1.25.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
] }
