[package]
name = "qldbx-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
qldbx-core = { path = "../qldbx-core" }

chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive", "env"] }
dotenvy = "0.15.6"
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
